# sdesktop

./: CMakeLists.txt  LICENSE  captcha.cpp  captcha.h  crypto.cpp  crypto.h  errmsg.cpp  errmsg.h  globalconfig.cpp  globalconfig.h  httpclientmgr.cpp  httpclientmgr.h  imageprovider.cpp  imageprovider.h  imageproviderbridge.cpp  imageproviderbridge.h  loginout.cpp  loginout.h  loginoutmgr.cpp  loginoutmgr.h  main.cpp  qmlRegister.h  qmlregister.cpp  readme.md  sdesktop.qrc  sexception.cpp  sexception.h  userinfo.cpp  userinfo.h
qml/: convention.txt  login.qml  signin.qml  signup.qml  startup.qml  userinfo.qml
